<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nebula"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnIniciarJuego"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:text="@string/btnInciarJuego" />

    <Button
        android:id="@+id/btnDificultad"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnIniciarJuego"
        android:layout_alignStart="@+id/btnIniciarJuego"
        android:layout_below="@+id/btnIniciarJuego"
        android:layout_marginTop="19dp"
        android:text="@string/btnDificultad" />

    <Button
        android:id="@+id/btnTemas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnDificultad"
        android:layout_alignStart="@+id/btnDificultad"
        android:layout_below="@+id/btnDificultad"
        android:layout_marginTop="20dp"
        android:text="@string/btnTemas" />

    <Button
        android:id="@+id/btnTiempos"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTemas"
        android:layout_alignStart="@+id/btnTemas"
        android:layout_below="@+id/btnTemas"
        android:layout_marginTop="25dp"
        android:text="@string/btnTiempos" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTiempos"
        android:layout_alignStart="@+id/btnTiempos"
        android:layout_below="@+id/btnTiempos"
        android:layout_marginTop="24dp"
        android:text="@string/btnSalir" />
</RelativeLayout>