<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nebula"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtViewDificultad"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:layout_marginTop="24dp"
        android:layout_toEndOf="@+id/btnAceptarDificultad"
        android:layout_toRightOf="@+id/btnAceptarDificultad"
        android:text="@string/textoDificultad"
        android:textColor="@color/blanco" />

    <RadioGroup
        android:id="@+id/radioGroupDificultad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAtrasDificultad"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignLeft="@+id/txtViewDificultad"
            android:layout_alignStart="@+id/txtViewDificultad"
            android:layout_below="@+id/txtViewDificultad"
            android:layout_marginTop="75dp"
            android:text="@string/radioFacil"
            android:textColor="@color/blanco" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignLeft="@+id/radioButton"
            android:layout_alignStart="@+id/radioButton"
            android:layout_below="@+id/radioButton"
            android:layout_marginTop="52dp"
            android:checked="true"
            android:text="@string/radioMedio"
            android:textColor="@color/blanco" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="103dp"
            android:layout_height="70dp"
            android:layout_alignLeft="@+id/radioButton2"
            android:layout_alignStart="@+id/radioButton2"
            android:layout_below="@+id/radioButton2"
            android:layout_marginTop="51dp"
            android:text="@string/radioDificil"
            android:textColor="@color/blanco" />




    </RadioGroup>

    <Button
        android:id="@+id/btnAceptarDificultad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="49dp"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:text="@string/btnAceptar" />

    <Button
        android:id="@+id/btnAtrasDificultad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnAceptarDificultad"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:text="@string/btnAtras" />
</RelativeLayout>